--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vitest": "^0.34.1"
+  },
+  "lint-stage": {
+    "**/*": "prettier --write --ignore-unknown" 
   }
 }
